tests/ui/fail/typedef_undefined_trait_multipath.stderr
error: cannot find macro `UndefinedTrait` in this scope
  --> tests/ui/fail/typedef_undefined_trait_multipath.rs:12:18
   |
12 | #[typedef(super::UndefinedTrait)]
   |                  ^^^^^^^^^^^^^^
   |
   = note: `UndefinedTrait` is in scope, but it is a trait, not a macro

error: cannot find macro `UndefinedTrait` in this scope
  --> tests/ui/fail/typedef_undefined_trait_multipath.rs:12:18
   |
12 | #[typedef(super::UndefinedTrait)]
   |                  ^^^^^^^^^^^^^^
   |
   = note: `UndefinedTrait` is in scope, but it is a trait, not a macro
   = note: this error originates in the macro `this_trait_is_not_defined_with_coinduction_traitdef` which comes from the expansion of the attribute macro `typedef` (in Nightly builds, run with -Z macro-backtrace for more info)
